--- a/templates/designPost.html
+++ b/templates/designPost.html
@@ -55,7 +55,7 @@
         <div class="row">
           <table class="table"> 
 
-            <tr><th>編號</th><td>{{homeform.cNumber}}</td></tr>
+            <tr><th>受訂單號</th><td>{{homeform.cNumber}}</td></tr>
             <tr><th>勝新業務</th><td>{{homeform.cName}}</td></tr>
             <tr><th>案件名稱</th><td>{{homeform.cProject}}</td></tr>
             <tr><th>客戶名稱</th><td>{{homeform.cClient}}</td></tr>
