--- a/templates/pdfconvert.html
+++ b/templates/pdfconvert.html
@@ -135,7 +135,7 @@
     <tr style="border: none;">
       <td style="padding-left: 10px;">3.高級濾網：{{Tablespec.third_high}}</td>
     </tr>
-    {% if Tablespec.third_high_frameform == "含" %}
+    {% if Tablespec.third_high == "含" %}
       <tr style="border: none;">
         <td style="padding-left: 20px;">外框型式：{{Tablespec.third_high_frameform}}</td>
         <td style="padding-left: 20px;">長度：{{Tablespec.third_high_long}}</td>
