--- a/templates/tablespecEdit.html
+++ b/templates/tablespecEdit.html
@@ -69,7 +69,7 @@
         <p style="color:red; font-weight: bold; font-size: larger;">{{message}}</p>
     </div>
 
-    <form action="/tablespecEdit/{{OrderSpec.cNumber}}/save" method="POST" name="form1">
+    <form action="/tablespecEdit/{{OrderSpec.id}}/save" method="POST" name="form1">
         {% csrf_token %}
         <div class="container">
             <div class="row">
